--- a/explore/02_Feature_Selection.ipynb
+++ b/explore/02_Feature_Selection.ipynb
@@ -46,6 +46,7 @@
     "path =r\"D:\\assigments\\2023_06_30_creon\\Employee-attrition.csv\" #change this to the location of your input file\n",
     "\n",
     "p = prepare_data.PrepareData(path)\n",
+    "p.prepare_data()\n",
     "\n",
     "X_train, X_test, y_train, y_test = p.get_train_test_split( )"
    ]
@@ -193,12 +194,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee8a30b5",
+   "cell_type": "markdown",
+   "id": "645c4b49",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Decision: We use the f_classif test, as many of the variables are numerical and its result is more balanced"
+   ]
   }
  ],
  "metadata": {
