--- a/explore/02_Feature_Selection.ipynb
+++ b/explore/02_Feature_Selection.ipynb
@@ -195,10 +195,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "645c4b49",
+   "id": "9dcdf812",
    "metadata": {},
    "source": [
-    "Decision: We use the f_classif test, as many of the variables are numerical and its result is more balanced"
+    "Decision: We use the f_classif test, as many of the variables are numerical and its result is more balanced. \n",
+    "note: k=15 top scored columns seems a good feature set size. "
    ]
   }
  ],
