--- a/explore/01_Data_Exploration.ipynb
+++ b/explore/01_Data_Exploration.ipynb
@@ -5818,12 +5818,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78bf5671",
+   "cell_type": "markdown",
+   "id": "e726df3a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "note: We keep the idenfitied columns removed. No missing values have to be treated. No potential outliers found. The variables do not show any significant relation to the target variable clearly that we could identify by the manual methods used. We use stastical tests for feature selection.  "
+   ]
   },
   {
    "cell_type": "code",
