--- a/explore/02_Feature_Selection.ipynb
+++ b/explore/02_Feature_Selection.ipynb
@@ -195,11 +195,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dcdf812",
+   "id": "a0c99a31",
    "metadata": {},
    "source": [
     "Decision: We use the f_classif test, as many of the variables are numerical and its result is more balanced. \n",
-    "note: k=15 top scored columns seems a good feature set size. "
+    "note: k=15 top scored columns seems a good feature set size. \n",
+    "note: we do not check variables for dependencies"
    ]
   }
  ],
