--- a/explore/02_Feature_Selection.ipynb
+++ b/explore/02_Feature_Selection.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6b44b410",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -30,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "02aae847",
    "metadata": {},
    "outputs": [
@@ -53,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d7ba87e4",
    "metadata": {},
    "outputs": [
@@ -124,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2ec713ff",
    "metadata": {},
    "outputs": [
@@ -199,8 +190,7 @@
    "metadata": {},
    "source": [
     "Decision: We use the f_classif test, as many of the variables are numerical and its result is more balanced. \n",
-    "note: k=15 top scored columns seems a good feature set size. \n",
-    "note: we do not check variables for dependencies"
+    "note: k=15 top scored columns seems a good feature set size. \n"
    ]
   }
  ],
