--- a/explore/03_Check_Classifers.ipynb
+++ b/explore/03_Check_Classifers.ipynb
@@ -335,7 +335,7 @@
    "id": "2f51e413",
    "metadata": {},
    "source": [
-    "To make a good decision for an algorithm depends on buisness needs. In the given case, we do have very little datapoints. My favorits are Neural Net and AdaBoost as they are most above randomness and show the best results for f1 score (and so a given balance bewtween precision and recall).  "
+    "To make a good decision for an algorithm depends on buisness needs. In the given case, we do have very little datapoints. My favorits are Neural Net and AdaBoost as they are most above randomness and show the best results for f1 score (and so a given balance bewtween precision and recall). Focussing on a higher recall (sentive to probable churn) Naive Bayes and QDA may be good candidates. But actually none of the algorithms is statistically reliable with the given dataset.  "
    ]
   }
  ],
